Move the nightly installers to Java 21 [3115]
* Modified the runMcV scripts to use that horrible JPMS invocation, and
  also had the idea to make the runMcV output look a bit more friendly.
  Right now there isn't much to see--but soon!

* Lots and lots of install4j changes. Most of them are tossing old
  stuff that isn't relevant, but there's other stuff like using
  install4j to manage our JREs.

* Began using the JetBrains Runtime (rather than ZuluFX) in the installers.

* The most apparent change will be the fact that I declared a temporary
  coup and decided that my first revolutionary act would be the
  streamlining of the installer names and whatnot:

    McIDAS-V_2.0beta1_macosx_x86_installer.dmg -> McIDAS-V_2.0beta1_macos_intel_installer.dmg

    McIDAS-V_2.0beta1_linux_x86-64_installer.sh -> McIDAS-V_2.0beta1_linux_installer.sh
    McIDAS-V_2.0beta1_linux_x86-64_java11_installer.sh -> GONE!

    McIDAS-V_2.0beta1_windows64_installer.exe -> McIDAS-V_2.0beta1_windows_installer.exe
    McIDAS-V_2.0beta1_windows64_java11_installer.exe -> GONE!

* My second revolutionary act was to build an installer that runs
  natively on Apple's ARM processors.

    McIDAS-V_2.0beta1_macos_arm_installer.dmg